sonar lint fixed